<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity"
    android:orientation="vertical"
    android:screenOrientation="landscape"
    android:background="@drawable/bg_image"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_final_score_is"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginTop="50dp"/>

    <TextView
        android:textColor="@color/colorAccent"
        android:id="@+id/totalScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_score"
        android:textSize="20sp"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">



        <Button
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:width="1dp"
            android:text="@string/restart"
            android:textSize="18sp"
            android:onClick="returnTop"
            />

        <Button
            android:id="@+id/scoreboard"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/save_score"
            android:textSize="18sp"
            android:onClick="saveScore"
            app:layout_constraintLeft_toRightOf="@id/home" />

    </LinearLayout>
</LinearLayout>